Fix docs headers being hidden by sticky header

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -207,3 +207,8 @@ h3 {
     max-width: 30rem;
   }
 }
+
+// Fixes docs headings being hidden under sticky header
+[id^="heading--"] {
+  scroll-margin-top: 60px;
+}
